🧾 Wire login form & add signup button

--- a/templates/login.html
+++ b/templates/login.html
@@ -92,7 +92,8 @@
     <img src="{% static 'images/logoMisurataUni.png' %}" alt="Logo">
     <h3>تسجيل الدخول</h3>
 
-    <form action="#" method="POST">
+    <form action="{% url 'login' %}" method="POST">
+        {% csrf_token %}
         <div class="input-group">
             <span class="input-group-text"><i class="bi bi-person"></i></span>
             <input type="text" class="form-control" name="student_id" placeholder="رقم القيد" required>
@@ -104,6 +105,12 @@
         </div>
 
         <button type="submit" class="btn btn-login">دخول</button>
+        {% if error %}
+        <div style="margin-top:12px; color:#b91c1c; font-weight:600">{{ error }}</div>
+        {% endif %}
+        <div style="margin-top:14px; text-align:center">
+            <a href="{% url 'signup' %}" class="btn btn-outline-primary" style="width:100%;">إنشاء مستخدم</a>
+        </div>
     </form>
 </div>
 
